pushing to gh-pages

--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
        </div>
 
         <div class="media-icons">
-          <a href="">
+          <a href="http://www.facebook.com">
             <i class="fa fa-facebook" style="color: blue"></i>
           </a>
         </div>
 
 
         <div class="media-icons">
-          <a href="">
+          <a href="http://www.twitter.com">
             <i class="fa fa-twitter" style="color: lightblue"></i>
           </a>
         </div>
 
 
         <div class="media-icons">
-          <a href="">
+          <a href="http://www.github.com">
             <i class="fa fa-github" style="color: black"></i>
           </a>
         </div>
