adding a contact page

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <nav class="menu">
           <ul>
             <li>
-              <a href="#">Home</a>
+              <a href="home.html">Home</a>
             </li>
 
             <li>
-              <a href="#">About</a>
+              <a href="about.html">About</a>
             </li>
 
             <li>
-              <a href="#">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
           </ul>
         </nav>
@@ -101,6 +101,14 @@
       </div>
     </section>
 
+    <!--===== Begin Video Section =====-->
+
+    <section id="video">
+      <div class="video-container">
+        <iframe width="854" height="480"  src="https://www.youtube.com/embed/X5YaihAtnC4?autoplay=1&loop=1&playlist=GRonxog5mbw" frameborder="0" allowfullscreen></iframe>
+      </div>
+
+    </section>
     <!--===== Begin About Section =====-->
 
     <section id="about">
