--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="menu">
           <ul>
             <li>
-              <a href="home.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
 
             <li>
