finalizing my website

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="Description" content="This is Shivne's website"/>
     <title>shivne: Home Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="css/main.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
     <!--===== Begin Header =====-->
-    <header>
+    <section id="header">
       <div class="container">
         <div class="logo">
           <h1>Shivne</h1>
@@ -42,14 +43,12 @@
           </a>
         </div>
       </div>
-    </header>
+    </section>
 
 
     <!--===== Begin Banner =====-->
     <section id="banner">
-      <div class="banner-text">
         <h1 style="color:black; text-align:center;">The Calm Before The Storm...</h1>
-      </div>
     </section>
 
 
@@ -105,7 +104,7 @@
 
     <section id="video">
       <div class="video-container">
-        <iframe width="854" height="480"  src="https://www.youtube.com/embed/X5YaihAtnC4?autoplay=1&loop=1&playlist=GRonxog5mbw" frameborder="0" allowfullscreen></iframe>
+        <iframe width="854" height="480"  src="https://www.youtube.com/embed/X5YaihAtnC4?" frameborder="0" allowfullscreen></iframe>
       </div>
 
     </section>
@@ -125,6 +124,41 @@
 
     </section>
 
+    <!--===== Begin Map Section =====-->
+
+        <section id="map">
+          <div class="map-section">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.178576340414!2d-119.7975288852812!3d36.74228447865847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5d1bf341b%3A0x2547b07bf4a759a3!2s2210+San+Joaquin+St%2C+Fresno%2C+CA+93721!5e0!3m2!1sen!2sus!4v1459214570024" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </section>
+
+
+<!--===== Begin Contact Section =====-->
+
+
+        <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+          <h1>Contact Me!</h1>
+        	<div class="row" style="margin-top: 20px;">
+        		<label for="name">Your name:</label><br />
+        		<input id="name" class="input" name="name" type="text" placeholder="Name" size="60" /><br />
+        	</div>
+        	<div class="row">
+        		<label for="email">Your email:</label><br />
+        		<input id="email" class="input" name="email" type="text" placeholder="Email" size="60" /><br />
+        	</div>
+        	<div class="row">
+        		<label for="message">Your message:</label><br />
+        		<textarea id="message" class="input" placeholder="Message" name="message" rows="7" cols="62"></textarea><br />
+        	</div>
+        	<input id="submit_button" type="submit" value="Send email" />
+          </form>
+          <div class="address">
+              <div style="margin-top: 80px;">700 Van Ness Avenue</div>
+              <div>Fresno, CA 93721</div>
+              <div>559.555.5555</div>
+              <div>mullich@mail.fresnostate.edu</div>
+          </div>
+
 <!--===== Begin Footer Section =====-->
 
     <section id="footer">
@@ -135,14 +169,14 @@
 
         <div class="media-icons">
           <a href="http://www.facebook.com">
-            <i class="fa fa-facebook" style="color: blue"></i>
+            <i class="fa fa-facebook" style="color: #3b5998"></i>
           </a>
         </div>
 
 
         <div class="media-icons">
           <a href="http://www.twitter.com">
-            <i class="fa fa-twitter" style="color: lightblue"></i>
+            <i class="fa fa-twitter" style="color: #4099FF"></i>
           </a>
         </div>
 
@@ -154,7 +188,20 @@
         </div>
       </div>
 
-
     </section>
+
+
+<!--===== Google analytics Code =====-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-75720539-1', 'auto');
+      ga('send', 'pageview');
+
+  </script>
+
   </body>
 </html>
