--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,33 @@
     </section>
 
 
+    <!--===== Begin Contact Section =====-->
+
+
+            <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+              <h1>Contact Me!</h1>
+            	<div class="row" style="margin-top: 20px;">
+            		<label for="name">Your name:</label><br />
+            		<input id="name" class="input" name="name" type="text" placeholder="Name" size="60" /><br />
+            	</div>
+            	<div class="row">
+            		<label for="email">Your email:</label><br />
+            		<input id="email" class="input" name="email" type="text" placeholder="Email" size="60" /><br />
+            	</div>
+            	<div class="row">
+            		<label for="message">Your message:</label><br />
+            		<textarea id="message" class="input" placeholder="Message" name="message" rows="7" cols="62"></textarea><br />
+            	</div>
+            	<input id="submit_button" type="submit" value="Send email" />
+              </form>
+              <div class="address">
+                  <div style="margin-top: 80px;">700 Van Ness Avenue</div>
+                  <div>Fresno, CA 93721</div>
+                  <div>559.555.5555</div>
+                  <div>mullich@mail.fresnostate.edu</div>
+              </div>
+
+
 <!--===== Begin Footer Section =====-->
 
     <section id="footer">
@@ -84,5 +111,18 @@
 
 
     </section>
+
+    <!--===== Google analytics Code =====-->
+      <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-75720539-1', 'auto');
+      ga('send', 'pageview');
+
+      </script>
+
   </body>
 </html>
