--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+
     <!--===== Begin Header =====-->
     <header>
       <div class="container">
@@ -37,7 +38,7 @@
           <a href="http://linkedin.com">
             <i><i class="fa fa-linkedin", style="color:blue"></i>LinkedIn</i>
           </a>
-          <a href="http://github.com">
+          <a href="https://github.com/shivne">
             <i><i class="fa fa-github", style="color:black"></i>Github</i>
           </a>
         </div>
@@ -46,11 +47,7 @@
 
 
     <!--===== Begin Banner =====-->
-    <section id="banner">
-      <div class="banner-text">
-        <h1 style="color:black; text-align:center;">The Calm Before The Storm...</h1>
-      </div>
-    </section>
+    <section id="banner" style="height: 218px"></section>
 
 
     <!--===== Begin Contact Section =====-->
@@ -103,7 +100,7 @@
 
 
         <div class="media-icons">
-          <a href="http://www.github.com">
+          <a href="https://github.com/shivne">
             <i class="fa fa-github" style="color: black"></i>
           </a>
         </div>
