--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+
     <!--===== Begin Header =====-->
+
     <section id="header">
       <div class="container">
         <div class="logo">
-          <h1>Shivne</h1>
+          <h1>Andy Caruso</h1>
         </div>
         <nav class="menu">
           <ul>
@@ -38,7 +40,7 @@
           <a href="http://linkedin.com">
             <i><i class="fa fa-linkedin", style="color:blue"></i>LinkedIn</i>
           </a>
-          <a href="http://github.com">
+          <a href="https://github.com/shivne">
             <i><i class="fa fa-github", style="color:black"></i>Github</i>
           </a>
         </div>
@@ -47,8 +49,9 @@
 
 
     <!--===== Begin Banner =====-->
+
     <section id="banner">
-        <h1 style="color:black; text-align:center;">The Calm Before The Storm...</h1>
+        <h1 style="color:black; text-align:center;">I walk slowly, but I never walk backward<br> <span style="font-size: 1rem">-Abraham Lincoln</span></h1>
     </section>
 
 
@@ -64,7 +67,7 @@
 
           </div>
           <div class="skills-info">
-            <h2>Skill 1</h2>
+            <h2>HTML</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, deserunt natus fugiat dicta dolore. Illum sit sunt deleniti odit, in ipsum voluptatibus nam, hic cupiditate culpa aliquam blanditiis veritatis sapiente.
             </p>
@@ -77,7 +80,7 @@
             </a>
           </div>
           <div class="skills-info">
-            <h2>Skill 1</h2>
+            <h2>CSS</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, deserunt natus fugiat dicta dolore. Illum sit sunt deleniti odit, in ipsum voluptatibus nam, hic cupiditate culpa aliquam blanditiis veritatis sapiente.
             </p>
@@ -90,7 +93,7 @@
             </a>
           </div>
           <div class="skills-info">
-            <h2>Skill 1</h2>
+            <h2>Javascript</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, deserunt natus fugiat dicta dolore. Illum sit sunt deleniti odit, in ipsum voluptatibus nam, hic cupiditate culpa aliquam blanditiis veritatis sapiente.
             </p>
@@ -108,11 +111,12 @@
       </div>
 
     </section>
+    
     <!--===== Begin About Section =====-->
 
     <section id="about">
       <div class="box2">
-        <img class="img1" src="img\lionhead.jpg"/>
+        <img class="img1" style="border: 5px solid #000;" src="img\owl.jpg"/>
 
 
       </div>
@@ -156,7 +160,7 @@
               <div style="margin-top: 80px;">700 Van Ness Avenue</div>
               <div>Fresno, CA 93721</div>
               <div>559.555.5555</div>
-              <div>mullich@mail.fresnostate.edu</div>
+              <div><a href="mailto:mullich@mail.fresnostate.edu" target="_top" style="color: #000">mullich@mail.fresnostate.edu</a></div>
           </div>
 
 <!--===== Begin Footer Section =====-->
@@ -164,7 +168,7 @@
     <section id="footer">
      <div class="container3">
        <div>
-         <h5>Powered by Shivne Technology</h5>
+         <h5>Powered by Caruso Technology</h5>
        </div>
 
         <div class="media-icons">
@@ -182,7 +186,7 @@
 
 
         <div class="media-icons">
-          <a href="http://www.github.com">
+          <a href="https://github.com/shivne">
             <i class="fa fa-github" style="color: black"></i>
           </a>
         </div>
