--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
           <a href="http://linkedin.com">
             <i><i class="fa fa-linkedin", style="color:blue"></i>LinkedIn</i>
           </a>
-          <a href="http://github.com">
+          <a href="https://github.com/shivne">
             <i><i class="fa fa-github", style="color:black"></i>Github</i>
           </a>
         </div>
@@ -46,18 +46,14 @@
 
 
     <!--===== Begin Banner =====-->
-    <section id="banner">
-      <div class="banner-text">
-        <h1 style="color:black; text-align:center;">The Calm Before The Storm...</h1>
-      </div>
-    </section>
+    <section id="banner" style="height: 218px"></section>
 
 
     <!--===== Begin About Section =====-->
 
     <section id="about">
       <div class="box2">
-        <img class="img1" src="img\lionhead.jpg"/>
+        <img class="img1" src="img\owl.jpg"/>
 
 
       </div>
@@ -92,7 +88,7 @@
 
 
         <div class="media-icons">
-          <a href="http://www.github.com">
+          <a href="https://github.com/shivne">
             <i class="fa fa-github" style="color: black"></i>
           </a>
         </div>
@@ -112,6 +108,6 @@
       ga('send', 'pageview');
 
       </script>
-      
+
   </body>
 </html>
